# aplications/advertising/controllers/advertising.py
@@ -1,5 +1,6 @@
 from aplications.advertising.instructions.advertising import IAdvertising
 from flask import jsonify
+from aplications.advertising.models import Advertising
 import base64
 
 
@@ -33,8 +34,52 @@ class CAdvertising(IAdvertising):
 
     def get_with_filter_advertising(self, filter_param):
 
+        ads = self.get_all_advertising()
+        active = True
+
+        if filter_param.get('active'):
+            active = filter_param['active']
+
         if filter_param.get('person_id'):
-            pass
+            ads = self.get_advertising_by_person_id(
+                filter_param['person_id'], active)
 
         if filter_param.get("start_date") and filter_param.get('end_date'):
-            pass
+            ads = self.get_period_advertising(
+                filter_param["start_date"], filter_param["end_date"], active
+            )
+
+        if filter_param.get('start_date') and not filter_param.get('end_date'):
+            return jsonify({'message': 'preencha o campo de data final'}), 401
+
+        if not filter_param.get('start_date') and filter_param.get('end_date'):
+            return jsonify({'message': 'preencha o campo de data inicial'}), 401
+
+        return_list = [self.create_object_json(ad) for ad in ads]
+
+        if not return_list and filter_param:
+            return jsonify({'message': 'não foi possível encontrar dados'}), 404
+
+        return jsonify(return_list), 200
+
+    def create_object_json(self, advertising: Advertising):
+
+        start_date = 'null'
+        if advertising.date_start:
+            start_date = advertising.date_start.strftime('%Y-%m-%d %H:%M:%S')
+
+        end_date = 'null'
+        if advertising.date_end:
+            end_date = advertising.date_end.strftime('%Y-%m-%d %H:%M:%S')
+
+        print(base64.decodebytes(advertising.image))
+
+        return {
+            'name': advertising.name,
+            'image': advertising.image,
+            'date_start': start_date,
+            'date_end': end_date,
+            'description': advertising.description,
+            'active': advertising.active,
+            'person_id': advertising.person_id,
+        }
